Adding custom path tokenizer