@@ -1,3 +1,9 @@
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
+
 import org.apache.commons.io.FileUtils;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.TokenStream;
@@ -6,19 +12,20 @@ import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.TextField;
-import org.apache.lucene.index.*;
+import org.apache.lucene.index.DirectoryReader;
+import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.IndexWriterConfig;
+import org.apache.lucene.index.Term;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.ScoreDoc;
+import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.SimpleFSDirectory;
 import org.apache.lucene.util.QueryBuilder;
 import org.apache.lucene.util.Version;
-
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Path;
 
 public class Playground {
 
@@ -27,16 +34,16 @@ public class Playground {
     private static final String INDEX_DIRECTORY = "luceneIndex";
     private Analyzer analyzer;
 
-    public Playground() throws Exception {
-        indexDirectory = SimpleFSDirectory.open(Path.of(INDEX_DIRECTORY));
+    Playground() throws Exception {
+        indexDirectory = SimpleFSDirectory.open(Paths.get(INDEX_DIRECTORY));
         analyzer = new StandardAnalyzer();
     }
 
-    public void setAnalyzer(Analyzer analyzer) {
+    private void setAnalyzer(Analyzer analyzer) {
         this.analyzer = analyzer;
     }
 
-    void printTokens(String fieldName, String text) throws IOException {
+    private void printTokens(String fieldName, String text) throws IOException {
         final TokenStream src = analyzer.tokenStream(fieldName, text);
         src.reset();
         System.out.println("==========================================");
@@ -49,7 +56,7 @@ public class Playground {
         src.close();
     }
 
-    private void indexDocument(Document document) throws Exception {
+    void indexDocument(Document document) throws Exception {
         IndexWriter writer = new IndexWriter(indexDirectory, new IndexWriterConfig(analyzer));
         writer.addDocument(document);
         writer.flush();
@@ -57,15 +64,14 @@ public class Playground {
         writer.close();
     }
 
-    public Document createDocument(String name, String value) throws IOException {
+    Document createDocument(String name, String value) throws IOException {
         Document document = new Document();
-        value = value.replace("/", "_");
         document.add(new TextField(name, value, Field.Store.YES));
         printTokens(name, value);
         return document;
     }
 
-    private void search(String field, String text) throws Exception {
+    void search(String field, String text) throws Exception {
         QueryBuilder bldr = new QueryBuilder(analyzer);
         IndexReader reader = DirectoryReader.open(indexDirectory);
         IndexSearcher searcher = new IndexSearcher(reader);
@@ -83,24 +89,21 @@ public class Playground {
         reader.close();
     }
 
-    private void  testTokenization() throws IOException {
-        String testString = "The path /p1/p2/p3 references /c1/c2";
-        printTokens("test", testString);
-        printTokens("test2", testString.replace('/','_'));
-    }
-
-    private void basicSearch() throws Exception {
-        Document document = createDocument("name", "India");
-        document.add(new TextField("description", "India, officially the Republic of India, is a country in South\" +\n" +
-                "                \"Asia. It is the seventh-largest country by area, the second-most populous country, and the most\" +\n" +
-                "                \"populous democracy in the world.", Field.Store.YES));
-        indexDocument(document);
-        document = this.createDocument("name", "Pacific Ocean");
-        document.add(new TextField("description", "The Pacific Ocean is the largest and deepest of Earth's oceanic divisions." +
-                "It extends from the Arctic Ocean in the north to the Southern Ocean in the south and is bounded by the continents of Asia" +
-                "and Australia in the west and the Americas in the east.", Field.Store.YES));
-        indexDocument(document);
-        search("description", "west");
+    void termSearch(String field, String text) throws Exception {
+        IndexReader reader = DirectoryReader.open(indexDirectory);
+        IndexSearcher searcher = new IndexSearcher(reader);
+        Query q1 = new TermQuery(new Term(field, text));
+        TopDocs topDocs = searcher.search(q1, 100);
+        System.out.println("==========================================");
+        System.out.println("Searching for {" + field + ":" + text + "} got " + topDocs.totalHits);
+        for (ScoreDoc doc : topDocs.scoreDocs) {
+            System.out.println("Score: " + doc.score);
+            int docidx = doc.doc;
+            Document docRetrieved = searcher.doc(docidx);
+            System.out.println("Value :" + docRetrieved.getField(field).stringValue());
+        }
+        System.out.println("==========================================");
+        reader.close();
     }
 
     private void pathSearch() throws Exception {
@@ -111,21 +114,34 @@ public class Playground {
         search("text", "/content/vegas/tower");
     }
 
-    private void pathSearch2() throws Exception {
-        setAnalyzer(new PathAnalyzer());
-        Document document = createDocument("text", "Hi! this is the path /content/vegas/tower");
+    private void pathSearch(String path, List<String> searchTerms, Analyzer analyzer) throws Exception {
+        Analyzer oldAnalyzer = this.analyzer;
+        setAnalyzer(analyzer);
+        Document document = createDocument("text", path);
         indexDocument(document);
-        document = createDocument("text", "Hi! no path!");
-        indexDocument(document);
-        search("text", "_content");
-//        search("text", "/content/vegas");
-//        search("text", "/content/vegas/tower");
+        for (String term : searchTerms) {
+            termSearch("text", term);
+        }
+        setAnalyzer(oldAnalyzer);
     }
 
     public static void main(String[] args) throws Exception {
         FileUtils.deleteDirectory(new File(INDEX_DIRECTORY));
         Playground playground = new Playground();
-        playground.pathSearch2();
+        //playground.pathSearch();
+        playground.pathSearch("Hi! this is the path /content/vegas/tower", new ArrayList<String>() {{
+            add("/content");
+            add("/content/vegas");
+            add("/content/vegas/tower");
+            add("/content/tower1/vegas");
+        }}, new PathAnalyzer());
+        playground.pathSearch("/content/dam/wknd/en/magazine/skitouring/Page%20Move%20Classes.jpg", new ArrayList<String>() {{
+            add("/content/dam/wknd/en/magazine/skitouring/Page%20Move%20Classes.jpg");
+        }}, new PathAnalyzer());
+        // you can't know if node name is car%20wheel.jpg or car%20wheel.jpg" or car%20wheel.jpg">link<
+        playground.pathSearch("Hey this is a <a href=\"/content/car%20wheel.jpg\">link</a>", new ArrayList<String>() {{
+            add("/content/car%20wheel.jpg");
+        }}, new PathAnalyzer());
     }
 
 }
